force-app/main/default/objects/PurchaseSaleContract__c/fields/HasDownPaymentExtension__c.field-meta.xml
<CustomField>
    <fullName>HasDownPaymentExtension__c</fullName>
    <label>Pagamento do Sinal Será Prorrogado?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>