force-app/main/default/objects/PurchaseSaleContract__c/fields/HaveDemandNoteReason__c.field-meta.xml
<CustomField>
    <fullName>HaveDemandNoteReason__c</fullName>
    <label>Motivo de Nota de Exigência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adequação de documento para PDF/A</fullName>
            </value>
            <value>
                <fullName>Rerratificação da escritura</fullName>
            </value>
            <value>
                <fullName>Termo de Quitação</fullName>
            </value>
            <value>
                <fullName>Procuração de TQ</fullName>
            </value>
            <value>
                <fullName>Procuração SL</fullName>
            </value>
            <value>
                <fullName>Procuração BY</fullName>
            </value>
            <value>
                <fullName>Atualização de Casamento BY</fullName>
            </value>
            <value>
                <fullName>Atualização de Casamento SL</fullName>
            </value>
            <value>
                <fullName>Atualização de União Estável BY</fullName>
            </value>
            <value>
                <fullName>Atualização de União Estável SL</fullName>
            </value>
            <value>
                <fullName>Registro de pacto antenupcial BY</fullName>
            </value>
            <value>
                <fullName>Registro de pacto antenupcial SL</fullName>
            </value>
            <value>
                <fullName>Divórcio SL</fullName>
            </value>
            <value>
                <fullName>Divórcio BY</fullName>
            </value>
            <value>
                <fullName>Documentos pessoais SL</fullName>
            </value>
            <value>
                <fullName>Documentos pessoais BY</fullName>
            </value>
            <value>
                <fullName>Atualização de dados do imóvel</fullName>
            </value>
            <value>
                <fullName>HIS/HMP</fullName>
            </value>
            <value>
                <fullName>ITBI</fullName>
            </value>
            <value>
                <fullName>Inventário</fullName>
            </value>
            <value>
                <fullName>Restrições judiciais (penhora, indisponibilidade, etc)</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>