force-app/main/default/objects/PurchaseSaleContract__c/fields/HaveUnpaidAlienation__c.field-meta.xml
<CustomField>
    <fullName>HaveUnpaidAlienation__c</fullName>
    <label>Tem Alienação Não Quitada?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
                <label>Sim</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>Não</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>