force-app/main/default/objects/PurchaseSaleContract__c/fields/HouseChattelMortgage__c.field-meta.xml
<CustomField>
    <fullName>HouseChattelMortgage__c</fullName>
    <label>Possui Alienação Fiduciária?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOES_NOT</fullName>
                <label>Não</label>
            </value>
            <value>
                <fullName>YES_PAID</fullName>
                <label>Sim, e Quitada</label>
            </value>
            <value>
                <fullName>YES_DEBT</fullName>
                <label>Sim e Não Está Quitada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>