force-app/main/default/objects/PurchaseSaleContract__c/fields/HouseRegistryMustBeUpdated__c.field-meta.xml
<CustomField>
    <fullName>HouseRegistryMustBeUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matrícula Precisa Ser Atualizada?</label>
    <type>Checkbox</type>
</CustomField>