force-app/main/default/objects/PurchaseSaleContract__c/fields/HouseRegistryMustBeUpdatedForm__c.field-meta.xml
<CustomField>
    <fullName>HouseRegistryMustBeUpdatedForm__c</fullName>
    <formula>IF(HouseRegistryMustBeUpdated__c = true, &quot;Sim&quot;, &quot;Não&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matrícula Precisa Ser Atualizada?</label>
    <type>Text</type>
</CustomField>