force-app/main/default/objects/PurchaseSaleContract__c/fields/HouseState__c.field-meta.xml
<CustomField>
    <fullName>HouseState__c</fullName>
    <label>Estado:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UF</valueSetName>
    </valueSet>
</CustomField>