force-app/main/default/objects/PurchaseSaleContract__c/fields/HubName__c.field-meta.xml
<CustomField>
    <fullName>HubName__c</fullName>
    <label>Nome do Hub</label>
    <length>255</length>
    <type>Text</type>
</CustomField>