force-app/main/default/objects/PurchaseSaleContract__c/fields/Inspection_Data_Completed__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Data_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dados Vistoria Preenchida  ?</label>
    <type>Checkbox</type>
</CustomField>