force-app/main/default/objects/PurchaseSaleContract__c/fields/Intervening_Party_Receipt_Completed__c.field-meta.xml
<CustomField>
    <fullName>Intervening_Party_Receipt_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interveniente Quitante Preenchidos ?</label>
    <type>Checkbox</type>
</CustomField>