force-app/main/default/objects/PurchaseSaleContract__c/fields/IsAssigned__c.field-meta.xml
<CustomField>
    <fullName>IsAssigned__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsAssigned</label>
    <type>Checkbox</type>
</CustomField>