force-app/main/default/objects/PurchaseSaleContract__c/fields/IsDiligenceAccepted__c.field-meta.xml
<CustomField>
    <fullName>IsDiligenceAccepted__c</fullName>
    <label>Diligência</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DD_PENDING</fullName>
                <label>Ainda Não Aceita</label>
            </value>
            <value>
                <fullName>DD_ACCEPTED</fullName>
                <label>Aceita</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>