force-app/main/default/objects/PurchaseSaleContract__c/fields/IsDownPaymentPaid__c.field-meta.xml
<CustomField>
    <fullName>IsDownPaymentPaid__c</fullName>
    <label>Pagamento do Sinal Realizado?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>