force-app/main/default/objects/PurchaseSaleContract__c/fields/iSolveLink__c.field-meta.xml
<CustomField>
    <fullName>iSolveLink__c</fullName>
    <label>Link do iSolve</label>
    <length>255</length>
    <type>Text</type>
</CustomField>