force-app/main/default/objects/PurchaseSaleContract__c/fields/IsSuspended__c.field-meta.xml
<CustomField>
    <fullName>IsSuspended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compra Suspensa?</label>
    <type>Checkbox</type>
</CustomField>