force-app/main/default/objects/PurchaseSaleContract__c/fields/ITBIStatus__c.field-meta.xml
<CustomField>
    <fullName>ITBIStatus__c</fullName>
    <label>Status do ITBI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NOT_STARTED</fullName>
                <label>Não Iniciado</label>
            </value>
            <value>
                <fullName>WAITING_INFORMATION</fullName>
                <default>true</default>
                <label>Aguardando Informação</label>
            </value>
            <value>
                <fullName>ITBI_ISSUED</fullName>
                <label>ITBI Emitido</label>
            </value>
            <value>
                <fullName>ITBI_PAID</fullName>
                <label>ITBI Pago</label>
            </value>
            <value>
                <fullName>ITBI_EXPIRED</fullName>
                <label>ITBI Vencido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>