force-app/main/default/objects/PurchaseSaleContract__c/fields/KeyDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>KeyDeliveryDate__c</fullName>
    <label>Data da Entrega das Chaves</label>
    <type>Date</type>
</CustomField>