force-app/main/default/objects/PurchaseSaleContract__c/fields/LasModifiedForm__c.field-meta.xml
<CustomField>
    <fullName>LasModifiedForm__c</fullName>
    <formula>IF(
   LastModifiedDate__c &lt;= TODAY()-5,
   IF(
      CONTAINS(
         $Api.Partner_Server_URL_260, 
         &quot;/portalcrnstaging/&quot;
      ), 
      TEXT(DAY(LastModifiedDate__c)) + &quot;-&quot; +  TEXT(MONTH(LastModifiedDate__c)) + &quot;-&quot; + TEXT(YEAR(LastModifiedDate__c)) + &quot; &quot; + IMAGE(&quot;/portalcrnstaging/resource/Kanban&quot;, &quot;Kanban&quot;, 20, 20), 
      IF(
         CONTAINS(
            $Api.Partner_Server_URL_260, 
            &quot;/portalcrn/&quot;
         ), 
         TEXT(DAY(LastModifiedDate__c)) + &quot;-&quot; +  TEXT(MONTH(LastModifiedDate__c)) + &quot;-&quot; + TEXT(YEAR(LastModifiedDate__c)) + &quot; &quot; + IMAGE(&quot;/portalcrn/resource/Kanban&quot;, &quot;Kanban&quot;, 20, 20), 
         TEXT(DAY(LastModifiedDate__c)) + &quot;-&quot; +  TEXT(MONTH(LastModifiedDate__c)) + &quot;-&quot; + TEXT(YEAR(LastModifiedDate__c)) + &quot; &quot; + IMAGE(&quot;/resource/Kanban&quot;, &quot;Kanban&quot;, 20, 20)
      )
   ),
   TEXT(DAY(LastModifiedDate__c)) + &quot;-&quot; +  TEXT(MONTH(LastModifiedDate__c)) + &quot;-&quot; + TEXT(YEAR(LastModifiedDate__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data da ultima modificação Portal</label>
    <type>Text</type>
</CustomField>