force-app/main/default/objects/PurchaseSaleContract__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <label>Data da última modificação</label>
    <type>Date</type>
</CustomField>