force-app/main/default/objects/PurchaseSaleContract__c/fields/LeaseComplaintSent__c.field-meta.xml
<CustomField>
    <fullName>LeaseComplaintSent__c</fullName>
    <label>Tem denúncia de locação?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>