force-app/main/default/objects/PurchaseSaleContract__c/fields/LicensePlateAttachedSales__c.field-meta.xml
<CustomField>
    <fullName>LicensePlateAttachedSales__c</fullName>
    <label>Matrícula Anexada no Vendas?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Sim</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>Não</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>