force-app/main/default/objects/PurchaseSaleContract__c/fields/ListViewUser__c.field-meta.xml
<CustomField>
    <fullName>ListViewUser__c</fullName>
    <formula>Escrivao__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exibição Usuário</label>
    <type>Checkbox</type>
</CustomField>