force-app/main/default/objects/PurchaseSaleContract__c/fields/LongTermPayment__c.field-meta.xml
<CustomField>
    <fullName>LongTermPayment__c</fullName>
    <label>Pagamento a Longo Prazo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>