force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxAlienationStatusCanceled__c.field-meta.xml
<CustomField>
    <fullName>LTAuxAlienationStatusCanceled__c</fullName>
    <label>LTAuxAlienationStatusCanceled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>