force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxAlienationStatusInvoiceSentToBuyer__c.field-meta.xml
<CustomField>
    <fullName>LTAuxAlienationStatusInvoiceSentToBuyer__c</fullName>
    <label>LTAuxAlienationStatusInvoiceSentToBuyer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>