force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxAlienationStatusNotStarted__c.field-meta.xml
<CustomField>
    <fullName>LTAuxAlienationStatusNotStarted__c</fullName>
    <label>LTAuxAlienationStatusNotStarted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>