force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxAlienationStatusPaymentMade__c.field-meta.xml
<CustomField>
    <fullName>LTAuxAlienationStatusPaymentMade__c</fullName>
    <label>LTAuxAlienationStatusPaymentMade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>