force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxAliStatusRecSettlementReceivedCrn__c.field-meta.xml
<CustomField>
    <fullName>LTAuxAliStatusRecSettlementReceivedCrn__c</fullName>
    <label>LTAuxAliStatusRecSettlementReceivedCrn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>