force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxCRIStatusRegistrationReceivedBuyer__c.field-meta.xml
<CustomField>
    <fullName>LTAuxCRIStatusRegistrationReceivedBuyer__c</fullName>
    <label>LTAuxCRIStatusRegistrationReceivedBuyer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>