force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxCRNStatusAwaitingDDAcceptance__c.field-meta.xml
<CustomField>
    <fullName>LTAuxCRNStatusAwaitingDDAcceptance__c</fullName>
    <label>LTAuxCRNStatusAwaitingDDAcceptance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>