force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxCRNStatusCanceled__c.field-meta.xml
<CustomField>
    <fullName>LTAuxCRNStatusCanceled__c</fullName>
    <label>LTAuxCRNStatusCanceled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>