force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxCRNStatusDeedSigned__c.field-meta.xml
<CustomField>
    <fullName>LTAuxCRNStatusDeedSigned__c</fullName>
    <label>LTAuxCRNStatusDeedSigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>