force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxCRNStatusDraftApproved__c.field-meta.xml
<CustomField>
    <fullName>LTAuxCRNStatusDraftApproved__c</fullName>
    <label>LTAuxCRNStatusDraftApproved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>