force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxCRNStatusDraftInPreparation__c.field-meta.xml
<CustomField>
    <fullName>LTAuxCRNStatusDraftInPreparation__c</fullName>
    <label>LTAuxCRNStatusDraftInPreparation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>