force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxCRNStatusDraftSentUnderApproval__c.field-meta.xml
<CustomField>
    <fullName>LTAuxCRNStatusDraftSentUnderApproval__c</fullName>
    <label>LTAuxCRNStatusDraftSentUnderApproval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>