force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxCRNStatusNotStarted__c.field-meta.xml
<CustomField>
    <fullName>LTAuxCRNStatusNotStarted__c</fullName>
    <label>LTAuxCRNStatusNotStarted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>