force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxCRNStatusSignatureScheduled__c.field-meta.xml
<CustomField>
    <fullName>LTAuxCRNStatusSignatureScheduled__c</fullName>
    <label>LTAuxCRNStatusSignatureScheduled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>