force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxEndStatusCCVAguardandoVendSolicAver__c.field-meta.xml
<CustomField>
    <fullName>LTAuxEndStatusCCVAguardandoVendSolicAver__c</fullName>
    <label>LTAuxEndStatusCCVAguardandoVendSolicAver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>