force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxFSCRIStatusCanceled__c.field-meta.xml
<CustomField>
    <fullName>LTAuxFSCRIStatusCanceled__c</fullName>
    <label>LTAuxFSCRIStatusCanceled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>