force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxFSCRIStatusFinished__c.field-meta.xml
<CustomField>
    <fullName>LTAuxFSCRIStatusFinished__c</fullName>
    <label>LTAuxFSCRIStatusFinished</label>
    <length>255</length>
    <type>Text</type>
</CustomField>