force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxFSCRIStatusNotStarted__c.field-meta.xml
<CustomField>
    <fullName>LTAuxFSCRIStatusNotStarted__c</fullName>
    <label>LTAuxFSCRIStatusNotStarted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>