force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxFSCRIStatusPreCri__c.field-meta.xml
<CustomField>
    <fullName>LTAuxFSCRIStatusPreCri__c</fullName>
    <label>LTAuxFSCRIStatusPreCri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>