force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxFSCRIStatusPrenoted__c.field-meta.xml
<CustomField>
    <fullName>LTAuxFSCRIStatusPrenoted__c</fullName>
    <label>LTAuxFSCRIStatusPrenoted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>