force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxFSCRIStatusTicketIssued__c.field-meta.xml
<CustomField>
    <fullName>LTAuxFSCRIStatusTicketIssued__c</fullName>
    <label>LTAuxFSCRIStatusTicketIssued</label>
    <length>255</length>
    <type>Text</type>
</CustomField>