force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxFSCRIStatusTicketPaid__c.field-meta.xml
<CustomField>
    <fullName>LTAuxFSCRIStatusTicketPaid__c</fullName>
    <label>LTAuxFSCRIStatusTicketPaid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>