force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxFSEndorsementStatusCCVFinalizada__c.field-meta.xml
<CustomField>
    <fullName>LTAuxFSEndorsementStatusCCVFinalizada__c</fullName>
    <label>LTAuxFSEndorsementStatusCCVFinalizada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>