force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxFSEndorsementStatusCCVNaoIniciada__c.field-meta.xml
<CustomField>
    <fullName>LTAuxFSEndorsementStatusCCVNaoIniciada__c</fullName>
    <label>LTAuxFSEndorsementStatusCCVNaoIniciada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>