force-app/main/default/objects/PurchaseSaleContract__c/fields/LTAuxFSEndorsementStatusCCVSolicitada__c.field-meta.xml
<CustomField>
    <fullName>LTAuxFSEndorsementStatusCCVSolicitada__c</fullName>
    <label>LTAuxFSEndorsementStatusCCVSolicitada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>