force-app/main/default/objects/PurchaseSaleContract__c/fields/LTBookkeepingDoneForm__c.field-meta.xml
<CustomField>
    <fullName>LTBookkeepingDoneForm__c</fullName>
    <formula>IF(
CCVCompletionDate__c = null || ISBLANK(CCVCompletionDate__c), (TODAY() - DATEVALUE(CCVSignedAt__c)), (CCVCompletionDate__c - DATEVALUE(CCVSignedAt__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LT de CASH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>