force-app/main/default/objects/PurchaseSaleContract__c/fields/MainIdBuyer__c.field-meta.xml
<CustomField>
    <fullName>MainIdBuyer__c</fullName>
    <formula>Buyer__r.MainId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MainIdBuyer</label>
    <type>Text</type>
</CustomField>