force-app/main/default/objects/PurchaseSaleContract__c/fields/MainIdSeller__c.field-meta.xml
<CustomField>
    <fullName>MainIdSeller__c</fullName>
    <formula>Seller__r.MainId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MainIdSeller</label>
    <type>Text</type>
</CustomField>