force-app/main/default/objects/PurchaseSaleContract__c/fields/NewPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>NewPaymentDate__c</fullName>
    <description>Campo destinado para o fluxo de ITBI Financiado.</description>
    <label>Nova Data de Pagamento</label>
    <type>Date</type>
</CustomField>