force-app/main/default/objects/PurchaseSaleContract__c/fields/OnboardingViaAi__c.field-meta.xml
<CustomField>
    <fullName>OnboardingViaAi__c</fullName>
    <formula>INCLUDES(TestSegments__c, &quot;EOP_CHAT_BOT_MVP_SELLER&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding via IA</label>
    <type>Checkbox</type>
</CustomField>