force-app/main/default/objects/PurchaseSaleContract__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contratos de Compra e Venda</relationshipLabel>
    <relationshipName>ContratoCompraVenda</relationshipName>
    <type>Lookup</type>
</CustomField>